[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "BFS"
authors = [{name = "Jake Oxendine", email = "Jake.Oxendine@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
	"networkx",
	"collections",
    "warnings"
]

[project.urls]
Home = "https://github.com/jakeox13/HW2-BFS.git"